@@ -8,6 +8,7 @@ o Added data(Fungicide), a 2 x 2 x 2 x 2 table
 o Renamed summarize() and related methods to summarise() to avoid conflict with plyr.
 o Addition to vcd-tutorial vignette on use of aperm() with table objects
 o Updated demo(yamaguchi-xie) to correct row/col nomenclature and add plot of BIC
+o Added aperm() S3 generic to handle table objects
 
 Version 0.5-1 (2010-09-17)
 
